Closed Bug 163661 Opened 23 years ago Closed 23 years ago

mlk: nsChildView::GetNativeData leaks rgnhandles

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Brade, Assigned: Brade)

Details

Attachments

(1 file)

nsChildView::GetNativeData will leak rgnhandles a quick survey of leaks with mallocdebug (for browsing half a dozen sites via browser buster) shows leaks of 578,760 bytes for 41,340 nodes.
so we can do it this way, or we can fix the single (for now) caller to just delete the region. this way may be safer, the other way doesn't keep the region hanging around, but could lead to more leaks down the line if anyone else asks for the region and forget to release it. simon? any preference?
Comment on attachment 96040 [details] [diff] [review] make behavior more similar to other mac code r=sfraser
Attachment #96040 - Flags: review+
fix checked into both M1_0 branch and M1_0_1 branch
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: