keep a region around to prevent memleak; r=pink/smfr (bug 163661)